objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job ID</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <label>Tax Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lights__c</fullName>
        <label>Lights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grün</fullName>
                </value>
                <value>
                    <fullName>Gelb</fullName>
                </value>
                <value>
                    <fullName>Rot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OptOUT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Haken ja = Nicht kontaktieren | Haken nein = kontaktieren</inlineHelpText>
        <label>OptOUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neu</fullName>
                    <default>true</default>
                    <label>Neu</label>
                </value>
                <value>
                    <fullName>Qualifizierung</fullName>
                </value>
                <value>
                    <fullName>Aktiv</fullName>
                </value>
                <value>
                    <fullName>Aktiv_Mailing</fullName>
                    <label>Aktiv - Mailing</label>
                </value>
                <value>
                    <fullName>Aktiv - Vermittelbar</fullName>
                </value>
                <value>
                    <fullName>Inaktiv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VTLink__c</fullName>
        <formula>IF(

 BEGINS(ExternalId__c, &quot;vt.contact.&quot;),

 &quot;https://vt.doctari.de/index.php?module=Contacts&amp;parenttab=Marketing&amp;action=DetailView&amp;record=&quot;

     &amp; SUBSTITUTE(ExternalId__c, &quot;vt.contact.&quot;, &quot;&quot;),

 IF(

   BEGINS(ExternalId__c, &quot;vt.account.&quot;),

   &quot;https://vt.doctari.de/index.php?module=Accounts&amp;action=DetailView&amp;record=&quot;

       &amp; SUBSTITUTE(ExternalId__c, &quot;vt.account.&quot;, &quot;&quot;),

   &quot;&quot;

 )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankBic__c</fullName>
        <label>Bank BIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Regions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North-East</fullName>
                </value>
                <value>
                    <fullName>North-West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South-East</fullName>
                </value>
                <value>
                    <fullName>South-West</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankCode__c</fullName>
        <label>Bank BLZ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankIban__c</fullName>
        <label>Bank IBAN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Shows the current position of the doctor.
Robin S. 20.06.2019</description>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RadiusKm__c</fullName>
        <label>Radius km</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>Deutschlandweit</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                    <isActive>false</isActive>
                    <label>300</label>
                </value>
                <value>
                    <fullName>Schweizweit</fullName>
                    <isActive>false</isActive>
                    <label>Schweizweit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <label>Register</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>HRB</fullName>
                </value>
                <value>
                    <fullName>GnR</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkLoad__c</fullName>
        <inlineHelpText>Die %-Angabe bezieht sich auf das Arbeitsvolumen beim &quot;aktuellen Arbeitgeber&quot;</inlineHelpText>
        <label>Work Load</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthname__c</fullName>
        <label>Birthname</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CognitoID__c</fullName>
        <externalId>true</externalId>
        <label>Cognito ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HomeVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LXStaffNo__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>LXStaffNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxNumber__c</fullName>
        <label>Tax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InactiveTo__c</fullName>
        <label>Inactive To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Motivation__c</fullName>
        <label>Motivation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nationwide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nationwide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substitute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Substitute</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Substitute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Car__c</fullName>
        <description>Information about a PersonAccount.
Robin S. 07.06.2019</description>
        <label>Company Car</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>for Dashboard Filter</description>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Institution</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingId__c</fullName>
        <label>Marketing ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOffersFor__c</fullName>
        <description>This field indicates for which specialties the physician does not want offers.
Robin S. 26.06.2019</description>
        <inlineHelpText>Dieses Feld zeigt an für welche Fachrichtungen der Arzt keine Angebote möchte.</inlineHelpText>
        <label>No offers for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Innere Medizin</fullName>
                </value>
                <value>
                    <fullName>invasiv</fullName>
                </value>
                <value>
                    <fullName>nicht invasiv</fullName>
                </value>
                <value>
                    <fullName>Innere Medizin + invasiv</fullName>
                </value>
                <value>
                    <fullName>Innere Medizin + nicht invasiv</fullName>
                </value>
                <value>
                    <fullName>Chirurgie</fullName>
                </value>
                <value>
                    <fullName>Orthopädie</fullName>
                </value>
                <value>
                    <fullName>selbständiges Operieren</fullName>
                </value>
                <value>
                    <fullName>Neuro</fullName>
                </value>
                <value>
                    <fullName>Psych</fullName>
                </value>
                <value>
                    <fullName>Gynaekologie (Frauenheilkunde) und Geburtshilfe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks Records that are used for testing purposes.</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concern_Code__c</fullName>
        <label>Concern Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractCity__c</fullName>
        <description>City field for the contract address.
Robin S. 19.02.2020</description>
        <label>City (Contract address)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveFrom__c</fullName>
        <label>Inactive From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobSituation__c</fullName>
        <label>Job Situation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbeitssuchend</fullName>
                </value>
                <value>
                    <fullName>Befristete Anstellung</fullName>
                </value>
                <value>
                    <fullName>Elternzeit</fullName>
                </value>
                <value>
                    <fullName>Festanstellung (Teilzeit)</fullName>
                </value>
                <value>
                    <fullName>Festanstellung (Vollzeit)</fullName>
                </value>
                <value>
                    <fullName>Rentner</fullName>
                </value>
                <value>
                    <fullName>Selbständig (Freiberuflich)</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LXCustomerNo__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>LXCustomerNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landlord_KAM__c</fullName>
        <label>Landlord KAM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEmployer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Last Employer)</relationshipLabel>
        <relationshipName>LastEmployer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Legal Entity)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfBeds__c</fullName>
        <label>Number of beds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlaceOfBirth__c</fullName>
        <label>Place Of Birth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deutschland</fullName>
                </value>
                <value>
                    <fullName>Schweiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Doctor_Job__c</fullName>
        <description>This field is used for DLRS and the automatic Opp Naming.
Robin S. 28.02.2019</description>
        <label>[T] Doctor Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caregiver_Job__c</fullName>
        <description>This field is used by the DLRS.
Robin S. 29.03.2019</description>
        <label>Caregiver Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearingHouse__c</fullName>
        <label>Clearing House</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractState__c</fullName>
        <description>State field for the contract address.
Robin S. 19.02.2020</description>
        <label>State (Contract address)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baden-Würrtemberg</fullName>
                    <isActive>false</isActive>
                    <label>Baden-Würrtemberg</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Baden-Württemberg</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Bayern</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Berlin</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Brandenburg</label>
                </value>
                <value>
                    <fullName>HB</fullName>
                    <label>Bremen</label>
                </value>
                <value>
                    <fullName>HH</fullName>
                    <label>Hamburg</label>
                </value>
                <value>
                    <fullName>HE</fullName>
                    <label>Hessen</label>
                </value>
                <value>
                    <fullName>MV</fullName>
                    <label>Mecklenburg-Vorpommern</label>
                </value>
                <value>
                    <fullName>NI</fullName>
                    <label>Niedersachsen</label>
                </value>
                <value>
                    <fullName>NW</fullName>
                    <label>Nordrhein-Westfalen</label>
                </value>
                <value>
                    <fullName>RP</fullName>
                    <label>Rheinland-Pfalz</label>
                </value>
                <value>
                    <fullName>SL</fullName>
                    <label>Saarland</label>
                </value>
                <value>
                    <fullName>SN</fullName>
                    <label>Sachsen</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>Sachsen-Anhalt</label>
                </value>
                <value>
                    <fullName>SH</fullName>
                    <label>Schleswig-Holstein</label>
                </value>
                <value>
                    <fullName>TH</fullName>
                    <label>Thüringen</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debtor_Number__c</fullName>
        <externalId>true</externalId>
        <label>Debtor Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvorceNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invorce Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreferredCity__c</fullName>
        <description>Preferred city is specified here. This field is used to search for the surrounding area.
Robin S. - 22.01.2019</description>
        <label>Preferred City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Recommended By)</relationshipLabel>
        <relationshipName>RecommendedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegisterCourt__c</fullName>
        <label>Register Court</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aachen</fullName>
                </value>
                <value>
                    <fullName>Altenburg</fullName>
                </value>
                <value>
                    <fullName>Amberg</fullName>
                </value>
                <value>
                    <fullName>Ansbach</fullName>
                </value>
                <value>
                    <fullName>Apolda</fullName>
                </value>
                <value>
                    <fullName>Arnsberg</fullName>
                </value>
                <value>
                    <fullName>Arnstadt</fullName>
                </value>
                <value>
                    <fullName>Arnstadt Zweigstelle Ilmenau</fullName>
                </value>
                <value>
                    <fullName>Aschaffenburg</fullName>
                </value>
                <value>
                    <fullName>Augsburg</fullName>
                </value>
                <value>
                    <fullName>Aurich</fullName>
                </value>
                <value>
                    <fullName>Bad Hersfeld</fullName>
                </value>
                <value>
                    <fullName>Bad Homburg v.d.H.</fullName>
                </value>
                <value>
                    <fullName>Bad Kreuznach</fullName>
                </value>
                <value>
                    <fullName>Bad Oeynhausen</fullName>
                </value>
                <value>
                    <fullName>Bad Salzungen</fullName>
                </value>
                <value>
                    <fullName>Bamberg</fullName>
                </value>
                <value>
                    <fullName>Bayreuth</fullName>
                </value>
                <value>
                    <fullName>Berlin (Charlottenburg)</fullName>
                </value>
                <value>
                    <fullName>Bielefeld</fullName>
                </value>
                <value>
                    <fullName>Bochum</fullName>
                </value>
                <value>
                    <fullName>Bonn</fullName>
                </value>
                <value>
                    <fullName>Braunschweig</fullName>
                </value>
                <value>
                    <fullName>Bremen</fullName>
                </value>
                <value>
                    <fullName>Chemnitz</fullName>
                </value>
                <value>
                    <fullName>Coburg</fullName>
                </value>
                <value>
                    <fullName>Coesfeld</fullName>
                </value>
                <value>
                    <fullName>Cottbus</fullName>
                </value>
                <value>
                    <fullName>Darmstadt</fullName>
                </value>
                <value>
                    <fullName>Deggendorf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Competitors__c</fullName>
        <label>[T]Competitors</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Description__c</fullName>
        <label>[T] Description</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_EmailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Angebot Email Out Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TerminationTo__c</fullName>
        <label>Termination To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tage</fullName>
                </value>
                <value>
                    <fullName>Wochen zum 15. des Kalendermonats </fullName>
                </value>
                <value>
                    <fullName>Wochen zum Ende des Kalendermonats</fullName>
                </value>
                <value>
                    <fullName>Monate zum Ende des Kalendermonats</fullName>
                </value>
                <value>
                    <fullName>Monate zum Quartal</fullName>
                </value>
                <value>
                    <fullName>Monate zum Jahresende</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommissionCity__c</fullName>
        <label>Commission City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStreet__c</fullName>
        <description>Street field for the contract address.
Robin S. 19.02.2020</description>
        <label>Street (Contract address)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryOfBirth__c</fullName>
        <label>Country of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Land</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EconomicRegion__c</fullName>
        <label>Economic Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unbekannt</fullName>
                </value>
                <value>
                    <fullName>EU/EWR/CH</fullName>
                </value>
                <value>
                    <fullName>Drittstaat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalAuthority__c</fullName>
        <description>Chosen values are transferred to quote and contract</description>
        <label>Final Authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalAuthority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MemoFieldSales__c</fullName>
        <label>Memo Field Sales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherAddressCo__c</fullName>
        <label>Other Address c/o</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodOfNotice__c</fullName>
        <label>Period of Notice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlacementTypes__c</fullName>
        <label>Placement Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>alle</fullName>
                </value>
                <value>
                    <fullName>ANUE</fullName>
                    <label>ANÜ</label>
                </value>
                <value>
                    <fullName>Fachpflege</fullName>
                </value>
                <value>
                    <fullName>Festanstellung</fullName>
                </value>
                <value>
                    <fullName>Befristete Anstellung</fullName>
                </value>
                <value>
                    <fullName>Honorar</fullName>
                    <isActive>false</isActive>
                    <label>Honorar</label>
                </value>
                <value>
                    <fullName>meditiv</fullName>
                    <isActive>false</isActive>
                    <label>meditiv</label>
                </value>
                <value>
                    <fullName>Ärzte Plus</fullName>
                    <isActive>false</isActive>
                    <label>Ärzte Plus</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegisterNumber__c</fullName>
        <label>Register Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondEmployer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Second Employer)</relationshipLabel>
        <relationshipName>SecondEmployer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_Process_Time__c</fullName>
        <description>Indicator time when process builder should fire.</description>
        <formula>Now()+ 0.00030</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Process Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkExperience__c</fullName>
        <label>Work Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Jahr</fullName>
                </value>
                <value>
                    <fullName>2 Jahre</fullName>
                </value>
                <value>
                    <fullName>3-5 Jahre</fullName>
                </value>
                <value>
                    <fullName>5-7 Jahre</fullName>
                </value>
                <value>
                    <fullName>7-10 Jahre</fullName>
                </value>
                <value>
                    <fullName>10-15 Jahre</fullName>
                </value>
                <value>
                    <fullName>&gt; 15 Jahre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>doctari_client__c</fullName>
        <label>doctari client</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalEmail__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CommissionPOBox__c</fullName>
        <label>Commission PO Box</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionState__c</fullName>
        <label>Commission State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractCountry__c</fullName>
        <description>Country field for the contract address.
Robin S. 19.02.2020</description>
        <label>Country (Contract address)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Land</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentEmployer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Current Employer)</relationshipLabel>
        <relationshipName>currentEmploer</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>